kubernetes/ingress/ingress-service.yaml
# ktb-bootcampchat-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ktb-bootcampchat-ingress
  namespace: ingress-nginx
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
